tests/agl/rejections/type/extern_bad_python_name.agl
extern def do-it!(x: int) -> int
do-it!(1)
